Adding additional project and changing project sequence, removing "Home" link

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,13 +46,13 @@
                 <div class="col-md-6 mb-4">
 
                   <!-- Name -->
-                  <input type="text" id="name" class="form-control" placeholder="Name">
+                  <input type="text" id="name" class="form-control" placeholder="Your name">
 
                 </div>
                 <div class="col-md-6 mb-4">
 
                   <!-- Email -->
-                  <input type="email" id="email" class="form-control" placeholder="Email">
+                  <input type="email" id="email" class="form-control" placeholder="Your email">
 
                 </div>
               </div>
@@ -70,8 +70,7 @@
                 <div class="col-md-12">
 
                   <div class="form-group mb-4">
-                    <textarea class="form-control rounded" id="message" rows="3"
-                      placeholder="How can I help?"></textarea>
+                    <textarea class="form-control rounded" id="message" rows="3" placeholder="Your message"></textarea>
                   </div>
 
                   <div class="text-center">
@@ -117,11 +116,11 @@
 
           <!-- Links -->
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
@@ -161,6 +160,86 @@
 
     <!--Main container-->
     <div class="container">
+      <div class="row">
+        <div class="col-md-5 mb-4">
+
+          <h3>Mobile network KPI Dashboard - Python,Grafana,MySQL</h2>
+            <hr>
+            <p>Project with the client to automate private mobile network KPIs (key process indicators) reports. </p>
+
+            <p>Turn key project:
+              <ul>
+                <li>processing raw xml files using Python</li>
+                <li>processing log files</li>
+                <li>design of MySQL schemas (more then 1000 counters)</li>
+                <li>SQL queries design</li>
+                <li><a href="https://grafana.com/">Grafana</a> integration with MySQL database</li>
+              </ul>
+            </p>
+            </p>
+
+
+            <p style="font-style: italic;">GitHub and live demo not available due to NDA.</p>
+
+
+        </div>
+        <!--Grid column-->
+        <div class="col-md-7 mb-4">
+
+          <div class="view overlay z-depth-1-half">
+            <img src="./assets/img/KPI.png" class="card-img-top" alt="">
+
+          </div>
+
+        </div>
+      </div>
+      <div class="row">
+
+        <!--Grid column-->
+        <div class="col-md-5 mb-4">
+
+          <h3>Hatter - chatting application</h3>
+          <h3>JavaScript,Node.js,Express,MySQL</h3>
+          <hr>
+          <p>Features:
+            <ul>
+              <li>User profile</li>
+              <li>Post new message</li>
+              <li>Comment on existing message</li>
+              <li>Delete your messeges</li>
+              <li>Follow other users</li>
+            </ul>
+          </p>
+          <p>
+            Technologies:
+            <ul>
+              <li>Node.js, express to serve web pages and handle API calls between front-end/back-end</li>
+              <li>MySQL database with relations between tables to store user profile, posts, likes, etc.</li>
+              <li>Using bcrypt module to hash user password</li>
+              <li>Bootstrap for responsive design, jQuery for handling front-end logic</li>
+            </ul>
+          </p>
+          <p>
+            Application layout works well for desktop and mobile browser. On mobile it colapses into single column.
+            Layout is built using bootstrap.</p>
+
+          <a href="https://github.com/KiteRunner2/hatter" style="box-shadow: 3px 3px 8px teal" target="blank"
+            class="btn btn-teal darken-1">GitHub Repo</a>
+          <a href="http://hatter.herokuapp.com/" style="box-shadow: 3px 3px 8px teal" target="blank"
+            class="btn btn-teal darken-1">Live app</a>
+
+        </div>
+        <div class="col-md-7 mb-4">
+
+          <div class="view overlay z-depth-1-half">
+            <img src="./assets/img/hatt.png" class="card-img-top" alt="">
+            <div class="mask rgba-white-light"></div>
+          </div>
+
+        </div>
+        <!--Grid column-->
+
+      </div>
 
       <!--Grid row-->
       <div class="row">
@@ -316,53 +395,7 @@
       </div>
       <!-- grid row -->
       <!--Grid row-->
-      <div class="row">
 
-        <!--Grid column-->
-        <div class="col-md-5 mb-4">
-
-          <h3>Hatter - chatting application</h3>
-          <h3>JavaScript,Node.js,Express,MySQL</h3>
-          <hr>
-          <p>Features:
-            <ul>
-              <li>User profile</li>
-              <li>Post new message</li>
-              <li>Comment on existing message</li>
-              <li>Delete your messeges</li>
-              <li>Follow other users</li>
-            </ul>
-          </p>
-          <p>
-            Technologies:
-            <ul>
-              <li>Node.js, express to serve web pages and handle API calls between front-end/back-end</li>
-              <li>MySQL database with relations between tables to store user profile, posts, likes, etc.</li>
-              <li>Using bcrypt module to hash user password</li>
-              <li>Bootstrap for responsive design, jQuery for handling front-end logic</li>
-            </ul>
-          </p>
-          <p>
-            Application layout works well for desktop and mobile browser. On mobile it colapses into single column.
-            Layout is built using bootstrap.</p>
-
-          <a href="https://github.com/KiteRunner2/hatter" style="box-shadow: 3px 3px 8px teal" target="blank"
-            class="btn btn-teal darken-1">GitHub Repo</a>
-          <a href="http://hatter.herokuapp.com/" style="box-shadow: 3px 3px 8px teal" target="blank"
-            class="btn btn-teal darken-1">Live app</a>
-
-        </div>
-        <div class="col-md-7 mb-4">
-
-          <div class="view overlay z-depth-1-half">
-            <img src="./assets/img/hatt.png" class="card-img-top" alt="">
-            <div class="mask rgba-white-light"></div>
-          </div>
-
-        </div>
-        <!--Grid column-->
-
-      </div>
       <!-- grid row -->
 
 
