--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <div class="col-md-6 mb-4">
 
                   <!-- Name -->
-                  <input type="text" id="name" class="form-control" placeholder="Name">
+                  <input type="text" id="name" class="form-control" placeholder="Your name">
 
                 </div>
                 <div class="col-md-6 mb-4">
 
                   <!-- Email -->
-                  <input type="email" id="email" class="form-control" placeholder="Email">
+                  <input type="email" id="email" class="form-control" placeholder="Your email">
 
                 </div>
               </div>
@@ -65,8 +65,7 @@
                 <div class="col-md-12">
 
                   <div class="form-group mb-4">
-                    <textarea class="form-control rounded" id="message" rows="3"
-                      placeholder="How can I help?"></textarea>
+                    <textarea class="form-control rounded" id="message" rows="3" placeholder="Your message"></textarea>
                   </div>
 
                   <div class="text-center">
@@ -98,7 +97,7 @@
       <div class="container">
 
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Przemek Rudzki</a>
+        <a class="navbar-brand" href="index.html">Przemek Rudzki</a>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -111,11 +110,11 @@
 
           <!-- Links -->
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
