updates to styling

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="Professional web development services.">
   <title>Przemek Rudzki</title>
   <!-- MDB icon -->
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
@@ -75,7 +76,7 @@
 
                   <div class="text-center">
                     <button type="submit" onclick="submit();$('#contactModal').modal('hide')"
-                      class="btn btn-info btn-md btn-teal darken-1">Submit</button>
+                      class="btn btn-info btn-md btn-teal darken-1" style="box-shadow: 3px 3px 8px teal">Submit</button>
                   </div>
 
                 </div>
