--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="Professional web development services.">
   <title>Przemek Rudzki</title>
 
   <link rel="icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
@@ -70,7 +71,7 @@
 
                   <div class="text-center">
                     <button type="submit" onclick="submit();$('#contactModal').modal('hide')"
-                      class="btn btn-info btn-md btn-teal darken-1">Submit</button>
+                      class="btn btn-info btn-md btn-teal darken-1" style="box-shadow: 3px 3px 8px teal">Submit</button>
                   </div>
 
                 </div>
@@ -219,11 +220,12 @@
                 <h4 class="card-title font-italic">Looking to grow your team?</h4>
                 <!--Text-->
                 <p class="card-text">I'm available for permanent/contract roles in the following locations: remote (with
-                  availability for up to 50% travel), or on-site in Brampton, Toronto, Markham, Mississauga.</p>
+                  availability for up to 50% travel), or on-site in Greater Toronto Area (GTA).</p>
 
                 <p class="card-text"> I'm also open to full-time roles at the senior/leadership level.</p>
-                <p class="card-text">Last update: March 27, 2020</p>
-                <a href="portfolio.html" class="btn btn-teal darken-1">Learn more</a>
+                <p class="card-text">Last update: April 1st, 2020</p>
+                <a href="portfolio.html" class="btn btn-teal darken-1" style="box-shadow: 3px 3px 8px teal">Learn
+                  more</a>
 
               </div>
             </div>
